--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AskHero">
         <activity android:name=".PaginaPrincipal"></activity>
-        <activity android:name=".Registros" />
+        <activity android:name=".Resultado" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
