--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AskHero">
-        <activity android:name=".PaginaPrincipal"></activity>
+        <activity android:name=".PerfilHeroe"></activity>
+        <activity android:name=".PaginaPrincipal" />
         <activity android:name=".Resultado" />
         <activity android:name=".MainActivity">
             <intent-filter>
